# pvc-exporter

./: .dive-ci.yaml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  GitVersion.yml  README.md  artifacthub-repo.yml  index.yaml  pvc_usage-dashboard.json  sonar-project.properties
.github/workflows/: release.yaml
block_pvc_scanner/: .container-structure-test-config.yaml  .coveragerc  .dockerignore  Dockerfile  README.md  REAME.md  setup.cfg  tox.ini
block_pvc_scanner/src/block_pvc_scanner/: __init__.py  __main__.py  block_pvc_scanner.py  main.py
block_pvc_scanner/tests/: data.py  test_main_loop.py  test_pvc.py  test_regex.py
charts/pvc-exporter/: Chart.yaml  values.yaml
charts/pvc-exporter/templates/: block-pvc-scanner-daemonset.yaml  block-pvc-scanner-podmonitor.yaml  block-pvc-scanner-service.yaml  block-pvc-scanner-servicemonitor.yaml  grafane-dashboard.yaml  namespace.yaml  pod-pvc-mapping-deployment.yaml  pod-pvc-mapping-service.yaml  pod-pvc-mapping-servicemonitor.yaml  pvc-exporter-servicemonitor.yaml  pvc-pod-mapping-podmonitor.yaml  rbac.yaml
pod_pvc_mapping/: .container-structure-test-config.yaml  .coveragerc  .dockerignore  Dockerfile  setup.cfg  tox.ini
pod_pvc_mapping/src/pod_pvc_mapping/: __main__.py  kubeclinet.py  logger.py  main.py  pod_pvc_mapping.py
pod_pvc_mapping/tests/: data.py  helper.py  test_main_loop.py  test_pvc.py
