[metadata]
name = block_pvc_scanner
version = attr: block_pvc_scanner.__version__
url = https://github.com/balihb/pvc-exporter
maintainer = Balazs Hamorszky
maintainer_email = balihb@gmail.com

[options]
install_requires =
    prometheus_client == 0.13.0
    psutil == 5.9.0

packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    block-pvc-scanner = block_pvc_scanner.__main__:_main
