[metadata]
name = pod_pvc_mapping
version = attr: pod_pvc_mapping.__version__
url = https://github.com/balihb/pvc-exporter
maintainer = Balazs Hamorszky
maintainer_email = balihb@gmail.com

[options]
install_requires =
    prometheus_client == 0.11.0
    kubernetes == 18.20.0

packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pod-pvc-mapping = pod_pvc_mapping.__main__:main

[options.package_data]
* = VERSION
